--- a/exercise1/intro.html
+++ b/exercise1/intro.html
@@ -12,6 +12,7 @@
        <!--all the contents of an HTML document goes here-->
          <h1>A Handmade Web </h1>
 
+<a href="part1.html">Página 1</a>
 
 
           <p><i><a href="file:///Users/mariagarciavelasco/Desktop/RISD/WEB/-mariagv12-.github.io/exercise1/part1.html">Start Reading</a></i></p>
