--- a/exercise1/part3.html
+++ b/exercise1/part3.html
@@ -36,7 +36,11 @@
         <p><i>J. R. Carpenter, March 2015.</i></p>
 
 
-           <p><strong><a href="file:///Users/mariagarciavelasco/Desktop/RISD/WEB/-mariagv12-.github.io/exercise1/part2.html"> ◄ </a></strong> </p>
+           <p><strong><a href="part2.html"> ◄ </a></strong> </p>
+
+           
+
+               <p><strong><a href="intro.html"> Home </a></strong> </p>
 
             </body>
         </html>
