--- a/exercise1/part1.html
+++ b/exercise1/part1.html
@@ -30,7 +30,7 @@
         The trAce community embraced both camps, and some early chatlogs contain lively discussions about the use of mixed media in writing… The creative hypertexts and hypermedia in the trAce Archive can easily be compared to the multifarious pages of an artist’s book. (PDF <a href="http://tracearchive.ntu.ac.uk/traces/traces.pdf/">trAces: A Commemoration of Ten Years of Artistic Innovation at trAce</a>, page 14)
         One of the many interesting things about the <a href="http://tracearchive.ntu.ac.uk/index.asp/">online archive</a> of the trAce Online Writing Centre is how much it reflects the context of the creation and dissemination of its contents. Whereas archives held in museums or libraries generally contain artifacts created elsewhere — manuscripts illuminated in a monastery, for example, or photographs developed in a darkroom — the handmade web pages contained in this online archive continue to exist in the medium within which they were created. That said, the frames through which we view them continue to change.</p>
 
-             <p><strong><a href="file:///Users/mariagarciavelasco/Desktop/RISD/WEB/-mariagv12-.github.io/exercise1/intro.html"> ◄</a>      <a href="file:///Users/mariagarciavelasco/Desktop/RISD/WEB/-mariagv12-.github.io/exercise1/part2.html"> ► </a></strong> </p>
+             <p><strong><a href="intro.html"> ◄</a>      <a href="part2.html"> ► </a></strong> </p>
 
             </body>
         </html>
