--- a/exercise1/part2.html
+++ b/exercise1/part2.html
@@ -37,7 +37,7 @@
         <p>I shall put off updating my website templates until out-of-date design is no longer cool.</p>
 
 
-           <p><strong><a href="file:///Users/mariagarciavelasco/Desktop/RISD/WEB/-mariagv12-.github.io/exercise1/part1.html"> ◄</a>      <a href="part3.html"> ► </a></strong> </p>
+           <p><strong><a href="part1.html"> ◄</a>      <a href="part3.html"> ► </a></strong> </p>
 
             </body>
         </html>
