--- a/exercise1/intro.html
+++ b/exercise1/intro.html
@@ -7,13 +7,36 @@
           
         <meta name="description" content=""><!--keywords/snippet for search engines-->
         <meta name="viewport" content="width=device-width"><!--the browser will (probably) render the width of the page at the width of its own screen -->
+         <link rel="stylesheet" href="style.css">
+
+         <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
     </head>
     <body>
+
+     <div class="top-bar">
+  <div class="nombre">Maria Garcia</div>
+  <div class="clase">Web as Medium 1</div>
+</div>
+
+             <nav id="sidebar">
+              <a href="part1.html">Part 1</a><br>
+              <a href="part2.html">Part 2</a><br>
+              <a href="part3.html">Part 3</a>
+            </nav>
+
        <!--all the contents of an HTML document goes here-->
          <h1>A Handmade Web </h1>
 
+          <a href="part1.html" id="introo">Start Reading</a>
 
-          <p><i><a href="part1.html">Start Reading</a></i></p>
+
+
+
+        
+
 
             </body>
         </html>
