--- a/exercise1/part3.html
+++ b/exercise1/part3.html
@@ -26,6 +26,8 @@
    <a href="part3.html" style="font-weight:bold;">Part 3</a><br>
 </nav>
 
+ <h2>Part 3 </h2>
+
         <p><strong>I evoke the term 'handmade web' in order to draw attention both to the manual labour involved in the composition of web pages, and the functioning of the web page itself as a 'manual', a 'handbook', a set of instructions required for a computer program to run.</p></strong>
 
         <p>For most of its history web pages have been read on desktop or laptop computers. Readers have had the option of right-clicking on any page, selecting View Page Source, copying, pasting, and re-writing the source code. In this manner, readers become writers.</p>
