--- a/exercise8/exercise8.html
+++ b/exercise8/exercise8.html
@@ -9,6 +9,8 @@
 
 <div id="container"></div>
 
+<a href="exercise82.html" class="NextPage">►</a>
+
 <script>
   const container = document.getElementById("container");
 
