--- a/exercise8/exercise82.html
+++ b/exercise8/exercise82.html
@@ -9,6 +9,9 @@
 
 <div id="shapeBox72"></div>
 
+<a href="exercise83.html" class="NextPage">►</a>
+<a href="exercise8.html" class="PageBefore">◄</a>
+
 <script>
 const container = document.getElementById("shapeBox72");
 
