--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <div class="columna">
         <h2>Exercises</h2>
     <a href="exercises/e1-helloworld" class="btn">Exercise 1</a>
-    <a href="exercises/e2-3-handmade-web/" class="btn">Exercise 2</a>
-    <a href="exercises/e4-5-css-letterforms/" class="btn">Exercise 4</a>
-    <a href="exercises/e6-on-off/" class="btn">Exercise 6</a>
-    <a href="exercises/e8-patterns/" class="btn">Exercise 8</a>
+    <a href="exercises/e2-3-handmade-web" class="btn">Exercise 2</a>
+    <a href="exercises/e4-5-css-letterforms" class="btn">Exercise 4</a>
+    <a href="exercises/e6-on-off" class="btn">Exercise 6</a>
+    <a href="exercises/e8-patterns" class="btn">Exercise 8</a>
       </div>
 
       <div class="columna">
